# lotus-cms-plugin

./: .readthedocs.yml  Makefile  README.rst  cookiebaked.json  freezer.py  frozen.txt  setup.cfg  sphinx_reload.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  test_with_tox.yml
cmsplugin_lotus/: __init__.py  apps.py  cms_plugins.py  models.py  queryset_maker.py  settings.py
cmsplugin_lotus/contrib/: django_configuration.py
cmsplugin_lotus/factories/: user.py
cmsplugin_lotus/migrations/: 0001_initial.py
cmsplugin_lotus/templates/lotus_cms_plugin/latest_articles/: default.html
cmsplugin_lotus/templates/partials/: card-img-classic.html
cmsplugin_lotus/utils/: privacy_filters.py  user.py
cmsplugin_lotus/utils/tests/: html_response.py
docs/: conf.py  development.rst  django_settings.py  index.rst  install.rst  requirements.txt  sphinx_reload.py
docs/references/: cms_plugins.rst  django_configuration.rst  index.rst  models.rst  privacy_filters.rst  queryset_maker.rst
lotus_cms_plugin/: __init__.py  apps.py  cms_plugins.py  defaults.py
lotus_cms_plugin/contrib/: django_configuration.py
lotus_cms_plugin/factories/: user.py
lotus_cms_plugin/migrations/: 0001_initial.py
lotus_cms_plugin/templates/lotus_cms_plugin/latest_articles/: default.html
lotus_cms_plugin/utils/: privacy_filters.py
sandbox/: urls.py
sandbox/settings/: base.py  tests.py
sandbox/templates/: skeleton.html
tests/: conftest.py
tests/010_models/: 011_article_plugin_params.py
tests/020_querysetmaker/: 021_behaviour.py  022_methods.py
tests/030_render/: 031_latest_articles.py
