;;
;; cmsplugin-lotus package
;;
[metadata]
name = cmsplugin-lotus
version = 0.1.0
description = A Django CMS plugin application package related to django-blog-lotus.
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Emencia
author_email = contact@emencia.com
url = https://github.com/emencia/cmsplugin-lotus
project_urls =
    Source Code = https://github.com/emencia/cmsplugin-lotus
    Issue Tracker = https://github.com/emencia/cmsplugin-lotus/issues
    Changelog = https://cmsplugin-lotus.readthedocs.io/en/latest/history.html
    Documentation = https://cmsplugin-lotus.readthedocs.io/
license = MIT
keywords = django-blog-lotus, django-cms, plugin, lotus, django
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Web Environment
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    django-cms>=3.11.0
    django-blog-lotus[breadcrumbs]==0.7.0
    django-autocomplete-light>=3.9.7
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest
    pytest-django
    factory-boy
    pyquery
quality =
    flake8
    tox
doc =
    sphinx>=4.3.0
    furo==2023.7.26
    sphinx-copybutton==0.5.2
doc-live =
    livereload
release =
    twine

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox


[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist =  py{38,310}-django{32,40,41,42}-cms{311}

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]

deps =
    django32: Django>=3.2,<4.0
    django40: Django>=4.0,<4.1
    django41: Django>=4.1,<4.2
    django42: Django>=4.2,<5.0
    cms311: django-cms>=3.11.0,<4.0
    py38-django32: backports.zoneinfo

commands =
    pip install -e .[dev]
    pytest -vv tests
